# ansible-galaxy-win

./: README.md  pyproject.toml
src/ansible_galaxy_win/: galaxy_win.py
